--- a/accesorios.html
+++ b/accesorios.html
@@ -19,15 +19,14 @@
     <!-- Top Bar -->
     <div class="top-bar d-none d-lg-block">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <span><i class="fas fa-truck-fast me-2"></i>Envío gratuito en pedidos superiores a 100€</span>
+            <div class="row align-items-center">
+                <div class="col-md-7">
+                    <span><i class="fas fa-crown me-2"></i>Portfolio personal de Romina Gutiérrez García — Diseñadora de moda</span>
                 </div>
-                <div class="col-md-6 text-end">
-                    <span class="me-3"><i class="fas fa-phone-alt me-2"></i>+34 912 345 678</span>
-                    <a href="#" class="me-3"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="me-3"><i class="fab fa-pinterest"></i></a>
+                <div class="col-md-5 text-end">
+                    <span class="me-3"><i class="fas fa-envelope-open me-2"></i>romina.gutierrez@atelier.com</span>
+                    <a href="https://www.instagram.com" class="me-3" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -36,7 +35,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
-            <a class="navbar-brand" href="index.html">LUXE</a>
+            <a class="navbar-brand" href="index.html">RGG Atelier</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -58,14 +57,29 @@
                         <a class="nav-link" href="colecciones.html">Colecciones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="nuestra-historia.html">Nuestra Historia</a>
+                        <a class="nav-link" href="galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nuestra-historia.html">¿Quién soy?</a>
+                    </li>
+                    <li class="nav-item d-none" data-admin-only>
+                        <a class="nav-link" href="cumpleanos.html"><i class="fas fa-gift me-2"></i>Cumpleaños</a>
                     </li>
                 </ul>
-                <div class="navbar-nav ms-auto nav-icons">
-                    <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
-                    <a class="nav-link" href="#"><i class="fas fa-user"></i></a>
-                    <a class="nav-link" href="#"><i class="fas fa-heart"></i></a>
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i> <span class="cart-count">0</span></a>
+                <div class="navbar-nav ms-auto nav-icons align-items-center gap-2">
+                    <a class="nav-link" href="galeria.html" title="Galería destacada">
+                        <i class="fas fa-images"></i><span>Portfolio</span>
+                    </a>
+                    <a class="nav-link" href="login.html" data-login-link title="Acceso privado">
+                        <i class="fas fa-user-lock"></i><span>Acceder</span>
+                    </a>
+                    <span class="nav-link admin-pill d-none" data-admin-pill>
+                        <i class="fas fa-crown"></i>
+                        <span data-admin-name></span>
+                    </span>
+                    <a class="nav-link d-none" href="#" data-logout-link title="Cerrar sesión">
+                        <i class="fas fa-sign-out-alt"></i><span>Salir</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -755,6 +769,8 @@
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script src="js/admin-config.js"></script>
+<script src="js/auth.js"></script>
 <script src="js/script.js"></script>
 <script>
     AOS.init({
