Integración de imagenes de IG y adaptacion manual a ciertos aspectos de los html

--- a/galeria.html
+++ b/galeria.html
@@ -281,9 +281,9 @@
           </div>
           <div class="flip-card-back">
             <h3>Suéter Blanco</h3>
-            <div class="designer">Por: Stella McCartney</div>
-            <div class="style">Estilo: Casual Elegante</div>
-            <div class="price">$189.99</div>
+            <div class="designer">Por: Romina Gutiérrez García</div>
+            <div class="style">Estilo: -------------------</div>
+            <div class="price"></div> <!-- PRECIO DE LA PRENDA -->
             <p>Conjunto elegante con pantalón beige. Perfecto para otoño, fabricado con lana merino de alta calidad para máxima comodidad.</p>
             <div class="details">
               <span class="material">Material: 70% Lana, 30% Algodón</span>
@@ -301,9 +301,9 @@
           </div>
           <div class="flip-card-back">
             <h3>Alta Costura</h3>
-            <div class="designer">Por: John Galliano</div>
-            <div class="style">Estilo: Avant-garde</div>
-            <div class="price">$2,499.99</div>
+            <div class="designer">Por: Romina Gutiérrez García</div>
+            <div class="style">Estilo: ------------ </div>
+            <div class="price"></div> <!-- PRECIO DE LA PRENDA -->
             <p>Diseño de pasarela inspirado en la moda parisina. Pieza exclusiva de edición limitada con detalles hechos a mano.</p>
             <div class="details">
               <span class="material">Material: Seda y encajes</span>
@@ -321,9 +321,9 @@
           </div>
           <div class="flip-card-back">
             <h3>Look Urbano</h3>
-            <div class="designer">Por: Virgil Abloh</div>
-            <div class="style">Estilo: Streetwear</div>
-            <div class="price">$349.99</div>
+            <div class="designer">Por: Romina Gutiérrez García</div>
+            <div class="style">Estilo: ---------- </div>
+            <div class="price"></div> <!-- PRECIO DE LA PRENDA -->
             <p>Chaqueta de mezclilla con vestido gris. Estilo casual y moderno perfecto para el día a día con un toque de sofisticación.</p>
             <div class="details">
               <span class="material">Material: Denim y algodón</span>
@@ -341,9 +341,9 @@
           </div>
           <div class="flip-card-back">
             <h3>Traje Azul</h3>
-            <div class="designer">Por: Giorgio Armani</div>
-            <div class="style">Estilo: Business Elegance</div>
-            <div class="price">$599.99</div>
+            <div class="designer">Por: Romina Gutiérrez García</div>
+            <div class="style">Estilo: ---------- </div>
+            <div class="price"></div> <!-- PRECIO DE LA PRENDA -->
             <p>Elegante conjunto azul ideal para reuniones y eventos. Corte impecable que realza la silueta con tejidos premium.</p>
             <div class="details">
               <span class="material">Material: 100% Lana Super 120s</span>
@@ -361,9 +361,9 @@
           </div>
           <div class="flip-card-back">
             <h3>Vestido Rojo</h3>
-            <div class="designer">Por: Valentino</div>
-            <div class="style">Estilo: Evening Glam</div>
-            <div class="price">$1,299.99</div>
+            <div class="designer">Por: Romina Gutiérrez García </div>
+            <div class="style">Estilo: ---------- </div>
+            <div class="price"></div> <!-- PRECIO DE LA PRENDA -->
             <p>Vestido elegante para ocasiones especiales con drapeados que crean un efecto espectacular al movimiento.</p>
             <div class="details">
               <span class="material">Material: Seda y chiffon</span>
@@ -381,9 +381,9 @@
           </div>
           <div class="flip-card-back">
             <h3>Denim Chic</h3>
-            <div class="designer">Por: Diesel</div>
-            <div class="style">Estilo: Denim Moderno</div>
-            <div class="price">$279.99</div>
+            <div class="designer">Por: Romina Gutiérrez García</div>
+            <div class="style">Estilo: -------- </div>
+            <div class="price"></div> <!-- PRECIO DE LA PRENDA -->
             <p>Conjunto moderno con mezclilla para un look fresco. Tratamientos especiales en la tela para mayor comodidad y estilo.</p>
             <div class="details">
               <span class="material">Material: Denim elastano</span>
