--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </div>
     </section>
 
-    <!-- New Arrivals Section -->
+    <!-- New Arrivals Section 
     <section class="new-arrivals-section py-5">
         <div class="container">
             <div class="row mb-5">
@@ -323,7 +323,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Promo Banner -->
     <section class="promo-banner py-5">
@@ -401,22 +401,22 @@
             <div class="row mb-5">
                 <div class="col-md-6 mx-auto text-center">
                     <h2 class="section-title" data-aos="fade-up">Lo que dicen mis mentores y clientes</h2>
-                    <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Testimonios reales sobre mi proceso creativo y los proyectos que he presentado en pasarela.</p>
+                    <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Testimonios reales sobre mi proceso creativo y los proyectos que he presentado.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="testimonial-card">
                         <div class="testimonial-content">
-                            <p class="testimonial-text">"Romina domina la construcción del volumen y la narrativa visual. Su colección cápsula para la EASD Madrid se convirtió en referencia para toda la promoción."</p>
+                            <p class="testimonial-text">"Sin duda alguna de las mejoras prendas que tengo actualmente. Jamás pense que me gustaría tanto un estilo distinto al que no estoy acostumbrado!!!"</p>
                         </div>
                         <div class="testimonial-author">
                             <div class="testimonial-avatar">
                                 <i class="fas fa-user-circle"></i>
                             </div>
                             <div class="testimonial-info">
-                                <h5>Patricia Romero</h5>
-                                <span>Mentora — EASD Madrid</span>
+                                <h5>Pablo García Ollero</h5>
+                                <span>Madrid/Coslada</span>
                             </div>
                             <div class="testimonial-rating">
                                 <i class="fas fa-star"></i>
@@ -484,55 +484,56 @@
             <div class="row mb-5">
                 <div class="col-md-6 mx-auto text-center">
                     <h2 class="section-title" data-aos="fade-up">Instagram</h2>
-                    <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Síguenos en @luxe_fashion</p>
+                    <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Síguenos en @rominuti_</p>
+                    <a href="https://www.instagram.com/rominuti_/" rel="noopener" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="row g-2">
                 <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up">
                     <div class="instagram-item">
-                        <img src="img/instagram-1.jpg" alt="Instagram 1" class="img-fluid">
+                        <img src="Instagram_files/IG_1.jpg" alt="Instagram 1" class="img-fluid">
                         <div class="instagram-overlay">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/rominuti_/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="100">
                     <div class="instagram-item">
-                        <img src="img/product-1.jpg" alt="Instagram 2" class="img-fluid">
+                        <img src="Instagram_files/IG_6.jpg" alt="Instagram 2" class="img-fluid">
                         <div class="instagram-overlay">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/rominuti_/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="200">
                     <div class="instagram-item">
-                        <img src="img/product-3.jpg" alt="Instagram 3" class="img-fluid">
+                        <img src="Instagram_files/IG_2.jpg" alt="Instagram 3" class="img-fluid">
                         <div class="instagram-overlay">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/rominuti_/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="300">
                     <div class="instagram-item">
-                        <img src="img/category-women.jpg" alt="Instagram 4" class="img-fluid">
+                        <img src="Instagram_files/IG_4.jpg" alt="Instagram 4" class="img-fluid">
                         <div class="instagram-overlay">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/rominuti_/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="400">
                     <div class="instagram-item">
-                        <img src="img/featured-2.jpg" alt="Instagram 5" class="img-fluid">
+                        <img src="Instagram_files/IG_5.jpg" alt="Instagram 5" class="img-fluid">
                         <div class="instagram-overlay">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/rominuti_/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="500">
                     <div class="instagram-item">
-                        <img src="img/category-accessories.jpg" alt="Instagram 6" class="img-fluid">
+                        <img src="Instagram_files/IG_7.jpg" alt="Instagram 6" class="img-fluid">
                         <div class="instagram-overlay">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/rominuti_/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
