--- a/colecciones.html
+++ b/colecciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colecciones - LUXE</title>
+    <title>Colecciones - RGG Atelier</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -45,15 +45,6 @@
                         <a class="nav-link" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mujer.html">Mujer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="hombre.html">Hombre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="accesorios.html">Accesorios</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link active" href="colecciones.html">Colecciones</a>
                     </li>
                     <li class="nav-item">
@@ -61,6 +52,15 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="nuestra-historia.html">¿Quién soy?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mujer.html">Mujer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="hombre.html">Hombre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="accesorios.html">Accesorios</a>
                     </li>
                     <li class="nav-item d-none" data-admin-only>
                         <a class="nav-link" href="cumpleanos.html"><i class="fas fa-gift me-2"></i>Cumpleaños</a>
@@ -617,7 +617,7 @@
         <!-- Bottom Footer -->
         <div class="row py-3">
             <div class="col-md-6 mb-3 mb-md-0">
-                <p class="mb-0">© 2023 LUXE. Todos los derechos reservados.</p>
+                <p class="mb-0">© RGG Atelier. Todos los derechos reservados.</p>
             </div>
             <div class="col-md-6 text-md-end">
                 <img src="img/payment-methods.png" alt="Métodos de pago" class="payment-methods">
