Add standalone collection pages and fix product layout

--- a/colecciones.html
+++ b/colecciones.html
@@ -134,7 +134,7 @@
                             <li><i class="fas fa-check"></i> Producción limitada para garantizar exclusividad</li>
                             <li><i class="fas fa-check"></i> Artesanía excepcional con atención meticulosa a los detalles</li>
                         </ul>
-                        <a href="#" class="btn btn-primary mt-3">Ver colección completa</a>
+                        <a href="coleccion-elegancia-atemporal.html" class="btn btn-primary mt-3">Ver colección completa</a>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                                 <span class="collection-season">Primavera/Verano 2023</span>
                                 <h3 class="collection-card-title">Serenidad Mediterránea</h3>
                                 <p class="collection-card-description">Una colección inspirada en los colores y texturas de la costa mediterránea, con prendas fluidas y ligeras en tonos pastel.</p>
-                                <a href="#" class="btn btn-outline-light">Explorar colección</a>
+                                <a href="coleccion-serenidad-mediterranea.html" class="btn btn-outline-light">Explorar colección</a>
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                                 <span class="collection-season">Otoño/Invierno 2022</span>
                                 <h3 class="collection-card-title">Esencia Urbana</h3>
                                 <p class="collection-card-description">Una fusión entre el lujo clásico y la estética urbana contemporánea, con piezas versátiles para la vida moderna.</p>
-                                <a href="#" class="btn btn-outline-light">Explorar colección</a>
+                                <a href="coleccion-esencia-urbana.html" class="btn btn-outline-light">Explorar colección</a>
                             </div>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                                 <span class="collection-season">Primavera/Verano 2022</span>
                                 <h3 class="collection-card-title">Renacimiento Natural</h3>
                                 <p class="collection-card-description">Celebrando la belleza de la naturaleza con estampados botánicos y colores vibrantes en siluetas femeninas y relajadas.</p>
-                                <a href="#" class="btn btn-outline-light">Explorar colección</a>
+                                <a href="coleccion-renacimiento-natural.html" class="btn btn-outline-light">Explorar colección</a>
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
                                 <span class="collection-season">Otoño/Invierno 2021</span>
                                 <h3 class="collection-card-title">Elegancia Nórdica</h3>
                                 <p class="collection-card-description">Inspirada en los paisajes escandinavos, esta colección destaca por su minimalismo sofisticado y atención al detalle.</p>
-                                <a href="#" class="btn btn-outline-light">Explorar colección</a>
+                                <a href="coleccion-elegancia-nordica.html" class="btn btn-outline-light">Explorar colección</a>
                             </div>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         <div class="special-collection-content">
                             <h3>Colección Cápsula</h3>
                             <p>Una selección cuidadosamente curada de piezas esenciales que conforman el guardarropa perfecto para cualquier ocasión.</p>
-                            <a href="#" class="btn btn-outline-dark btn-sm">Descubrir ahora</a>
+                            <a href="coleccion-capsula.html" class="btn btn-outline-dark btn-sm">Descubrir ahora</a>
                         </div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                         <div class="special-collection-content">
                             <h3>Arte en Movimiento</h3>
                             <p>Una colaboración única con artistas contemporáneos que fusiona el mundo del arte y la moda en piezas exclusivas.</p>
-                            <a href="#" class="btn btn-outline-dark btn-sm">Descubrir ahora</a>
+                            <a href="coleccion-arte-en-movimiento.html" class="btn btn-outline-dark btn-sm">Descubrir ahora</a>
                         </div>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                         <div class="special-collection-content">
                             <h3>Esencia Sostenible</h3>
                             <p>Nuestra primera colección completamente sostenible, creada con materiales reciclados y procesos respetuosos con el medio ambiente.</p>
-                            <a href="#" class="btn btn-outline-dark btn-sm">Descubrir ahora</a>
+                            <a href="coleccion-esencia-sostenible.html" class="btn btn-outline-dark btn-sm">Descubrir ahora</a>
                         </div>
                     </div>
                 </div>
