Intento 1 de solucionar el eror de visualización de imagenes en las secciones de Hombre, mujer y accesorios. Además, adaptación al estilo de foer final en todos los archivos

--- a/galeria.html
+++ b/galeria.html
@@ -396,14 +396,38 @@
   </section>
   </main>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>&copy; 2025 RGG Atelier — Romina Gutiérrez García</p>
-    <div>
-      <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a> ·
-      <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>
-    </div>
-  </footer>
+  <!-- Footer -->
+    <footer class="footer">
+        <div class="container py-5">
+            <div class="row g-4">
+                <div class="col-lg-4">
+                    <h5 class="footer-heading">Romina Gutiérrez García</h5>
+                    <p class="footer-text">Diseñadora de moda enfocada en la sostenibilidad, la investigación textil y las narrativas personales.</p>
+                </div>
+                <div class="col-lg-4">
+                    <h5 class="footer-heading">Contacto</h5>
+                    <ul class="contact-info">
+                        <li><i class="fas fa-envelope"></i> romina.gutierrez@atelier.com</li>
+                        <li><i class="fas fa-location-dot"></i> Madrid · Disponible para colaboraciones</li>
+                        <li><i class="fas fa-download"></i> <a href="colecciones.html">Ver portafolio completo</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4">
+                    <h5 class="footer-heading">Redes</h5>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="mailto:romina.gutierrez@atelier.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row pt-4 mt-3 border-top">
+                <div class="col text-center">
+                    <p class="mb-0">© 2025 Romina Gutiérrez García. Diseñado para compartir creatividad.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/admin-config.js"></script>
