--- a/mujer.html
+++ b/mujer.html
@@ -429,54 +429,32 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="row py-5">
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="footer-heading">RGG Atelier</h5>
-                    <p class="footer-text">Moda de lujo con diseños exclusivos y materiales premium. Experiencia de compra única con atención personalizada.</p>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-pinterest"></i></a>
-                    </div>
+        <div class="container py-5">
+            <div class="row g-4">
+                <div class="col-lg-4">
+                    <h5 class="footer-heading">Romina Gutiérrez García</h5>
+                    <p class="footer-text">Diseñadora de moda enfocada en la sostenibilidad, la investigación textil y las narrativas personales.</p>
                 </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="footer-heading">Información</h5>
-                    <ul class="footer-links">
-                        <li><a href="#">Sobre nosotros</a></li>
-                        <li><a href="#">Información de contacto</a></li>
-                        <li><a href="#">Política de privacidad</a></li>
-                        <li><a href="#">Términos y condiciones</a></li>
-                        <li><a href="#">FAQ</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="footer-heading">Cuenta</h5>
-                    <ul class="footer-links">
-                        <li><a href="#">Mi cuenta</a></li>
-                        <li><a href="#">Carrito</a></li>
-                        <li><a href="#">Lista de deseos</a></li>
-                        <li><a href="#">Seguimiento de pedido</a></li>
-                        <li><a href="#">Ayuda</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                <div class="col-lg-4">
                     <h5 class="footer-heading">Contacto</h5>
                     <ul class="contact-info">
-                        <li><i class="fas fa-map-marker-alt"></i> Calle Serrano 15, Madrid</li>
-                        <li><i class="fas fa-phone"></i> +34 912 345 678</li>
-                        <li><i class="fas fa-envelope"></i> info@luxe.com</li>
-                        <li><i class="fas fa-clock"></i> Lun - Sáb: 10:00 - 20:00</li>
+                        <li><i class="fas fa-envelope"></i> romina.gutierrez@atelier.com</li>
+                        <li><i class="fas fa-location-dot"></i> Madrid · Disponible para colaboraciones</li>
+                        <li><i class="fas fa-download"></i> <a href="colecciones.html">Ver portafolio completo</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="row py-3 border-top">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-0">© 2023 LUXE. Todos los derechos reservados.</p>
+                <div class="col-lg-4">
+                    <h5 class="footer-heading">Redes</h5>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="mailto:romina.gutierrez@atelier.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+                    </div>
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <img src="img/payment-methods.png" alt="Métodos de pago" class="payment-methods">
+            </div>
+            <div class="row pt-4 mt-3 border-top">
+                <div class="col text-center">
+                    <p class="mb-0">© 2025 Romina Gutiérrez García. Diseñado para compartir creatividad.</p>
                 </div>
             </div>
         </div>
