Reorganize static site into public directory

--- a/public/accesorios.html
+++ b/public/accesorios.html
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -242,7 +242,7 @@
                     <div class="mosaic-item mosaic-large">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/bolso.webp" alt="Bolso de cuero" class="img-fluid">
+                                <img src="./assets/img/bolso.webp" alt="Bolso de cuero" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
                                 <div class="product-actions">
                                     <a href="#" class="product-action"><i class="fas fa-shopping-bag"></i></a>
@@ -270,7 +270,7 @@
                     <div class="mosaic-item mosaic-medium">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/collar.webp" alt="Collar de plata" class="img-fluid">
+                                <img src="./assets/img/collar.webp" alt="Collar de plata" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -299,7 +299,7 @@
                     <div class="mosaic-item mosaic-small">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/gafassol.webp" alt="Gafas de sol" class="img-fluid">
+                                <img src="./assets/img/gafassol.webp" alt="Gafas de sol" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -330,7 +330,7 @@
                     <div class="mosaic-item mosaic-small">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/cinturon.webp" alt="Cinturón de cuero" class="img-fluid">
+                                <img src="./assets/img/cinturon.webp" alt="Cinturón de cuero" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -359,7 +359,7 @@
                     <div class="mosaic-item mosaic-medium">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/pulseraOro.webp" alt="Pulsera de oro" class="img-fluid">
+                                <img src="./assets/img/pulseraOro.webp" alt="Pulsera de oro" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -388,7 +388,7 @@
                     <div class="mosaic-item mosaic-large">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/bufanda.webp" alt="Bufanda de seda" class="img-fluid">
+                                <img src="./assets/img/bufanda.webp" alt="Bufanda de seda" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -417,7 +417,7 @@
                     <div class="mosaic-item mosaic-small">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/reloj.webp" alt="Reloj elegante" class="img-fluid">
+                                <img src="./assets/img/reloj.webp" alt="Reloj elegante" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -446,7 +446,7 @@
                     <div class="mosaic-item mosaic-medium">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/sombrero.webp" alt="Sombrero elegante" class="img-fluid">
+                                <img src="./assets/img/sombrero.webp" alt="Sombrero elegante" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -783,7 +783,7 @@
                 <p class="mb-0">© 2023 LUXE. Todos los derechos reservados.</p>
             </div>
             <div class="col-md-6 text-md-end">
-                <img src="img/payment-methods.png" alt="Métodos de pago" class="payment-methods">
+                <img src="./assets/img/payment-methods.png" alt="Métodos de pago" class="payment-methods">
             </div>
         </div>
     </div>
@@ -792,9 +792,9 @@
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="js/admin-config.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/script.js"></script>
+<script src="./js/admin-config.js"></script>
+<script src="./js/auth.js"></script>
+<script src="./js/script.js"></script>
 <script>
     AOS.init({
         duration: 800,
