--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="category-card">
-                        <img src="img/category-women.jpg" alt="Moda Mujer" class="img-fluid">
+                        <img src="./assets/img/category-women.jpg" alt="Moda Mujer" class="img-fluid">
                         <div class="category-overlay">
                             <div class="category-content">
                                 <h3>Mujer</h3>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="category-card">
-                        <img src="img/category-men.jpg" alt="Moda Hombre" class="img-fluid">
+                        <img src="./assets/img/category-men.jpg" alt="Moda Hombre" class="img-fluid">
                         <div class="category-overlay">
                             <div class="category-content">
                                 <h3>Hombre</h3>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="category-card">
-                        <img src="img/category-accessories.jpg" alt="Accesorios" class="img-fluid">
+                        <img src="./assets/img/category-accessories.jpg" alt="Accesorios" class="img-fluid">
                         <div class="category-overlay">
                             <div class="category-content">
                                 <h3>Accesorios</h3>
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-                    <img src="img/about-image.jpg" alt="Nuestra Historia" class="img-fluid rounded">
+                    <img src="./assets/img/about-image.jpg" alt="Nuestra Historia" class="img-fluid rounded">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="about-content">
@@ -218,7 +218,7 @@
                     <div class="product-card">
                         <div class="product-img">
                             <span class="product-tag">Nuevo</span>
-                            <img src="img/vestidoseda.webp" alt="Vestido de seda" class="img-fluid">
+                            <img src="./assets/img/vestidoseda.webp" alt="Vestido de seda" class="img-fluid">
                             <div class="product-actions">
                                 <a href="#" class="product-action"><i class="fas fa-shopping-bag"></i></a>
                                 <a href="#" class="product-action"><i class="fas fa-heart"></i></a>
@@ -243,7 +243,7 @@
                     <div class="product-card">
                         <div class="product-img">
                             <span class="product-tag bg-danger">-20%</span>
-                            <img src="img/product-2.jpg" alt="Bolso de cuero" class="img-fluid">
+                            <img src="./assets/img/product-2.jpg" alt="Bolso de cuero" class="img-fluid">
                             <div class="product-actions">
                                 <a href="#" class="product-action"><i class="fas fa-shopping-bag"></i></a>
                                 <a href="#" class="product-action"><i class="fas fa-heart"></i></a>
@@ -271,7 +271,7 @@
                     <div class="product-card">
                         <div class="product-img">
                             <span class="product-tag">Nuevo</span>
-                            <img src="img/product-3.jpg" alt="Blazer elegante" class="img-fluid">
+                            <img src="./assets/img/product-3.jpg" alt="Blazer elegante" class="img-fluid">
                             <div class="product-actions">
                                 <a href="#" class="product-action"><i class="fas fa-shopping-bag"></i></a>
                                 <a href="#" class="product-action"><i class="fas fa-heart"></i></a>
@@ -295,7 +295,7 @@
                 <div class="col-6 col-md-3 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/product-4.jpg" alt="Zapatos de cuero" class="img-fluid">
+                            <img src="./assets/img/product-4.jpg" alt="Zapatos de cuero" class="img-fluid">
                             <div class="product-actions">
                                 <a href="#" class="product-action"><i class="fas fa-shopping-bag"></i></a>
                                 <a href="#" class="product-action"><i class="fas fa-heart"></i></a>
@@ -341,7 +341,7 @@
                         </div>
                 </div>
                 <div class="col-md-5" data-aos="fade-left">
-                    <img src="img/contemporaneo.webp" alt="Moodboard creativo" class="img-fluid rounded">
+                    <img src="./assets/img/contemporaneo.webp" alt="Moodboard creativo" class="img-fluid rounded">
                 </div>
             </div>
         </div>
@@ -361,7 +361,7 @@
                     <div class="featured-card">
                         <div class="row g-0 h-100">
                             <div class="col-5 p-0 featured-img-container">
-                                <img src="img/invierno.webp" alt="Producto destacado 1" class="img-fluid">
+                                <img src="./assets/img/invierno.webp" alt="Producto destacado 1" class="img-fluid">
                             </div>
                             <div class="col-7">
                                 <div class="featured-content">
@@ -378,7 +378,7 @@
                     <div class="featured-card">
                         <div class="row g-0 align-items-center">
                             <div class="col-5">
-                                <img src="img/featured-2.jpg" alt="Producto destacado 2" class="img-fluid h-100 w-100 object-fit-cover rounded-start">
+                                <img src="./assets/img/featured-2.jpg" alt="Producto destacado 2" class="img-fluid h-100 w-100 object-fit-cover rounded-start">
                             </div>
                             <div class="col-7">
                                 <div class="featured-content">
@@ -697,9 +697,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AOS Animation JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/admin-config.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="./js/admin-config.js"></script>
+    <script src="./js/auth.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html> 
