--- a/public/login.html
+++ b/public/login.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Your main stylesheet (provided) -->
-  <link rel="stylesheet" href="css/login.css" />
-    <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./assets/css/login.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
   <main class="login-page">
@@ -59,8 +59,8 @@
     </section>
   </main>
 
-  <script src="js/admin-config.js"></script>
-  <script src="js/auth.js"></script>
+  <script src="./js/admin-config.js"></script>
+  <script src="./js/auth.js"></script>
   <script>
     function togglePassword() {
       const input = document.getElementById('password');
