--- a/public/mi-historia.html
+++ b/public/mi-historia.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <style>
         .timeline {
             position: relative;
@@ -168,11 +168,11 @@
                 <div class="col-lg-5">
                     <div class="story-gallery">
                         <figure>
-                            <img src="img/vestidomujer.webp" alt="Primer vestido">
+                            <img src="./assets/img/vestidomujer.webp" alt="Primer vestido">
                             <figcaption>Primer diseño presentado en público (2014)</figcaption>
                         </figure>
                         <figure>
-                            <img src="img/linomujer.webp" alt="Colección lino">
+                            <img src="./assets/img/linomujer.webp" alt="Colección lino">
                             <figcaption>Colección cápsula en lino orgánico (2021)</figcaption>
                         </figure>
                     </div>
@@ -244,8 +244,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/admin-config.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="./js/admin-config.js"></script>
+    <script src="./js/auth.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             window.RGGAuth.requireAdminAccess();
