--- a/public/nuestra-historia.html
+++ b/public/nuestra-historia.html
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -112,7 +112,7 @@
     <div class="container">
         <div class="row align-items-center mb-5">
             <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-                <img src="img/about-image.jpg" alt="Fundadores de LUXE" class="img-fluid rounded">
+                <img src="./assets/img/about-image.jpg" alt="Fundadores de LUXE" class="img-fluid rounded">
             </div>
             <div class="col-lg-6" data-aos="fade-left">
                 <h2 class="story-title">Nuestros orígenes</h2>
@@ -243,7 +243,7 @@
             <div class="col-md-4 mb-4" data-aos="fade-up">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src="img/elena.webp" alt="Elena Martínez - Fundadora y Directora Creativa" class="img-fluid">
+                        <img src="./assets/img/elena.webp" alt="Elena Martínez - Fundadora y Directora Creativa" class="img-fluid">
                     </div>
                     <div class="team-info">
                         <h3 class="team-name">Elena Martínez</h3>
@@ -261,7 +261,7 @@
             <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src="img/carlos.webp" alt="Carlos Rodríguez - Fundador y Director de Operaciones" class="img-fluid">
+                        <img src="./assets/img/carlos.webp" alt="Carlos Rodríguez - Fundador y Director de Operaciones" class="img-fluid">
                     </div>
                     <div class="team-info">
                         <h3 class="team-name">Carlos Rodríguez</h3>
@@ -279,7 +279,7 @@
             <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src="img/lucia.webp" alt="Lucía Fernández - Directora de Sostenibilidad" class="img-fluid">
+                        <img src="./assets/img/lucia.webp" alt="Lucía Fernández - Directora de Sostenibilidad" class="img-fluid">
                     </div>
                     <div class="team-info">
                         <h3 class="team-name">Lucía Fernández</h3>
@@ -423,7 +423,7 @@
                 <p class="mb-0">© 2023 LUXE. Todos los derechos reservados.</p>
             </div>
             <div class="col-md-6 text-md-end">
-                <img src="img/payment-methods.png" alt="Métodos de pago" class="payment-methods">
+                <img src="./assets/img/payment-methods.png" alt="Métodos de pago" class="payment-methods">
             </div>
         </div>
     </div>
@@ -432,9 +432,9 @@
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="js/admin-config.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/script.js"></script>
+<script src="./js/admin-config.js"></script>
+<script src="./js/auth.js"></script>
+<script src="./js/script.js"></script>
 <script>
     AOS.init({
         duration: 800,
